chore(openapi): added tags
